--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
-[submodule "GATraj_new"]
-	path = GATraj_new
+[submodule "GATraj"]
+	path = GATraj
 	url = https://github.com/mengmengliu1998/GATraj.git
-[submodule "STGAT_new"]
-	path = STGAT_new
+[submodule "STGAT"]
+	path = STGAT
 	url = https://github.com/huang-xx/STGAT.git
 [submodule "SSAGCN"]
 	path = SSAGCN
