--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
-[submodule "GATraj"]
+[submodule "GATraj_new"]
 	path = GATraj
 	url = https://github.com/mengmengliu1998/GATraj.git
-[submodule "STGAT"]
-	path = STGAT
+[submodule "STGAT_new"]
+	path = STGAT_new
 	url = https://github.com/huang-xx/STGAT.git
 [submodule "SSAGCN"]
 	path = SSAGCN
